# multistage-step-size-scheduling-minimax

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  plot.py  pyproject.toml  train.py  tune.py
code/: .gitignore  README.md  plot.py  pyproject.toml  train.py  tune.py
code/src/: config.py  data.py  models.py  schedulers.py  train.py  tune.py  utils.py
code/src/data/: choose.py  cifar10.py  common.py  covar.py  rls.py  wgan.py
code/src/models/: __init__.py  base.py  choose.py  cifar10.py  rls.py  wgan.py
configs/cifar10/: no-decay.yaml  poly-sqrt.yaml  poly.yaml  step-decay.yaml  var-decay.yaml
configs/covar/linear/no-decay/: 128.yaml  256.yaml  512.yaml
configs/covar/linear/poly/: 128.yaml  256.yaml  512.yaml
configs/covar/linear/poly-sqrt/: 128.yaml  256.yaml  512.yaml
configs/covar/linear/step-decay/: 128.yaml  256.yaml  512.yaml
configs/covar/linear/var-decay/: 128.yaml  256.yaml  512.yaml
configs/covar/nn/no-decay/: 128.yaml  256.yaml  512.yaml
configs/covar/nn/poly/: 128.yaml  256.yaml  512.yaml
configs/covar/nn/poly-sqrt/: 128.yaml  256.yaml  512.yaml
configs/covar/nn/step-decay/: 128.yaml  256.yaml  512.yaml
configs/covar/nn/var-decay/: 128.yaml  256.yaml  512.yaml
configs/rls/high/no-decay/: 256.yaml  64.yaml
configs/rls/high/poly/: 256.yaml  64.yaml
configs/rls/high/poly-sqrt/: 256.yaml  64.yaml
configs/rls/high/step-decay/: 256.yaml  64.yaml
configs/rls/high/var-decay/: 256.yaml  64.yaml
src/: __init__.py  tune.py  utils.py
src/data/: __init__.py  cifar10.py
src/models/: cifar10.py  covar.py
(+15 files in other folders)
